Layout for the language form and tb footer nav

--- a/assets/less/common/site-nav-variables.less
+++ b/assets/less/common/site-nav-variables.less
@@ -1,6 +1,8 @@
 // Cherry-picking a a few values so I don't have to bring in
 // and then override all the styles from www.thunderbird.net
+
 @xxl: 90rem;    // 1440px
+
 :root {
   --bg: white;
   --txt: var(--color-ink-80);
@@ -11,6 +13,7 @@
   --color-ink-80: #2a284b;
   --color-white: #fff;
 
+  --font-body: 1.125rem;      // 18px
   --font-lg: 1.1875rem;       // 19px
   --font-2xl: 1.3125rem;      // 21px
   --border-radius-lg: 0.75rem ; // 12px;
