Basic styling for page title, para, and cards

--- a/assets/less/common/fonts.less
+++ b/assets/less/common/fonts.less
@@ -50,6 +50,16 @@
     );
 }
 
+.brand-headline-h1-sm() {
+    .mixin-font-styles(
+        @family-metropolis,
+        lighter,
+        2rem, // 32px
+        1.2
+    );
+}
+
+
 .brand-headline-h1-xs() {
     .mixin-font-styles(
         @family-metropolis,
