--- a/sites/roadmaps.thunderbird.net/includes/base/base.html
+++ b/sites/roadmaps.thunderbird.net/includes/base/base.html
@@ -63,6 +63,13 @@
       <div id="main-content">
       {% block content %}{% endblock %}
       </div>
+
+      <div id="donation">
+        <p>Fund the work behind these roadmaps.</p>
+        <a href="">Donate Now</a>
+        <span class="donation-icon"></span>
+      </div>
+
     </main>
 
     {% block site_footer %}
