--- a/sites/roadmaps.thunderbird.net/includes/base/landing-page.html
+++ b/sites/roadmaps.thunderbird.net/includes/base/landing-page.html
@@ -46,7 +46,7 @@
 
     <a href="/desktop">View roadmap</a>
   </li>
-  <li class="card card-icon card-desktop">
+  <li class="card card-icon card-android">
     <strong>
         {{ _('Android')}}
     </strong>
@@ -55,7 +55,7 @@
 
     <a href="/desktop">View roadmap</a>
   </li>
-  <li class="card card-icon card-desktop">
+  <li class="card card-icon card-ios">
     <strong>
         {{ _('iOS')}}
     </strong>
@@ -64,7 +64,7 @@
 
     <a href="/desktop">View roadmap</a>
   </li>
-  <li class="card card-icon card-desktop">
+  <li class="card card-icon card-services">
     <strong>
         {{ _('Services')}}
     </strong>
