--- a/assets/less/roadmaps/index.less
+++ b/assets/less/roadmaps/index.less
@@ -11,6 +11,10 @@
 
 // Shared styles
 @import "../common/fonts.less";
+
+// Hover effects not working?
+// @import "../common/colours.less";
+// @import "../common/buttons.less";
 @import "../common/breakpoints.less";
 @import "../common/space.less";
 @import "../common/fonts.less";
@@ -228,8 +232,10 @@ main {
         background-color: var(--colour-surface-base);
         border: 1px solid var(--colour-surface-border);
         border-radius: 0.5rem;
+        color: var(--colour-text-icon-base);
         list-style: none;
         position: relative;
+
 
         display: grid;
         grid-template-rows: auto 1fr auto;
@@ -248,18 +254,18 @@ main {
             display: block;
         }
 
-        &, a {
-            color: var(--colour-text-icon-base);
-            text-decoration: none;
-        }
 
-        // Note: this is probably from bolt.
+        // // Note: this is probably from bolt.
         a {
-            border: 1px solid var(--colour-primary-default);
-            border-radius: 0.5rem;
             display: inline-block;
             justify-self: start;
             margin-top: 0.25rem;
+            border: 1px solid var(--colour-primary-default);
+            border-radius: 0.5rem;
+            color: var(--colour-primary-default);
+            display: inline-block;
+            justify-self: start;
+            text-decoration: none;
             padding-block: 0.84375rem;
             padding-inline: 1rem;
 
@@ -269,35 +275,46 @@ main {
     .card-icon {
         grid-template-columns: 1rem 1fr;
         &::before {
-            content: "*";
-            color: var(--colour-primary-default);
-            font-size: 24px;
-            display: block;
+            content: "";
+            height: 1.5rem;
+            width: 1.5rem;
+            display: inline-block;
             grid-column: 1;
             grid-row: 1 / span 3;
             align-self: start;
             justify-self: center;
+            background-color: var(--colour-primary-default);
+
+            // These properties let us change the color
+            // of an svg loaded as external resource.
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+            mask-size: contain;
         }
     }
 
     .card-android {
         &::before {
-            content: "a";
+            -webkit-mask-image: url("/media/svg/roadmaps/android-logo.svg");
+            mask-image: url("/media/svg/roadmaps/android-logo.svg");
         }
     }
     .card-desktop {
         &::before {
-            content: "d";
+            -webkit-mask-image: url("/media/svg/roadmaps/desktop-tower.svg");
+            mask-image: url("/media/svg/roadmaps/desktop-tower.svg");
         }
     }
     .card-ios {
         &::before {
-            content: "i";
+            -webkit-mask-image: url("/media/svg/roadmaps/apple-logo.svg");
+            mask-image: url("/media/svg/roadmaps/apple-logo.svg");
         }
     }
     .card-services {
         &::before {
-            content: "s";
+            -webkit-mask-image: url("/media/svg/roadmaps/globe.svg");
+            mask-image: url("/media/svg/roadmaps/globe.svg");
         }
     }
 
