--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -7,8 +7,8 @@
 @import "../common/fonts.less";
 @import "../common/space.less";
 
-@import "colours.less";
-@import "buttons.less";
+@import "../common/colours.less";
+@import "../common/buttons.less";
 
 @import "../common/tab-navigation-bar.less";
 @import "../common/common-footer.less";
