Tablet/desktop+ fonts. Tablet/desktop+ layout for landing page;

--- a/assets/less/common/breakpoints.less
+++ b/assets/less/common/breakpoints.less
@@ -3,3 +3,4 @@
 @sm:     37.5rem;      // 600px
 @md:     56.25rem;     // 900px;
 @lg:     80rem;        // 1280px
+@xl:     90rem;        // 1440px
