--- a/sites/roadmaps.thunderbird.net/includes/base/landing-page.html
+++ b/sites/roadmaps.thunderbird.net/includes/base/landing-page.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<ul>
+<ul class="card-container">
   <li class="card card-icon card-desktop">
     <strong>
         {{ _('Desktop')}}
