Adds some colors needed by nav links

--- a/assets/less/roadmaps/index.less
+++ b/assets/less/roadmaps/index.less
@@ -31,6 +31,15 @@
     --colour-surface-base: #1a202c;
     --colour-surface-border: #3d4d67;
     --colour-surface-lower: #18181b;
+
+    --color-white: #fff;
+    --color-black: #000;
+    --color-blue-50: #2493ef;
+    --color-purple-50: #a855f7;
+    --color-gray-30: #d4d4d8;
+    --color-ink-70: #3e3c67;
+    --color-ink-80: #2a284b;
+    --color-link: #1E4EAE;
 }
 
 
@@ -165,7 +174,6 @@ a {
 
 // From links.less
 .container.footer a{
-    --color-link: #1E4EAE;
     --accent: var(--color-link);
 
     color: currentColor;
