--- a/sites/roadmaps.thunderbird.net/includes/base/base.html
+++ b/sites/roadmaps.thunderbird.net/includes/base/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block extra_meta %}{% endblock %}
 
+
     {% block shared_meta %}
     <title>{% filter striptags|e %}{% block page_title_full %}{% block page_title_prefix %}{% endblock %}{% block page_title %}{% endblock %}{% endblock page_title_full %}{% block page_title_suffix %} Thunderbird's Public Roadmaps{% endblock %}{% endfilter %}</title>
     <meta name="description" content="{% filter striptags|e %}{% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}{% endfilter %}">
@@ -62,14 +63,46 @@
       <div id="main-content">
       {% block content %}{% endblock %}
       </div>
+
+      <div id="donation">
+        <p>Fund the work behind these roadmaps.</p>
+        <a href="">Donate Now</a>
+        <span class="donation-icon"></span>
+      </div>
+
     </main>
 
     {% block site_footer %}
         {% include 'includes/base/footer.html' %}
     {% endblock %}
 
-    {% block additional_site_js %}{% endblock %}
 
+
+    <script type="text/javascript" src="{{ static('js/roadmaps-bundle.js') }}" charset="utf-8"></script>
+    <script>
+      (function (){
+        // Allow page to show hamburger menu.
+        document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/, "js");
+
+        // From main tb website
+        const navbar = document.querySelector(".site-nav");
+        if (navbar) {
+          const navbarClass = 'scrolled-nav';
+          let navbarState = navbar.classList.contains(navbarClass);
+
+          window.addEventListener("scroll", () => {
+            if (!navbarState && window.scrollY > 30) {
+              navbar.classList.add(navbarClass);
+              navbarState = true;
+            } else if (navbarState && window.scrollY <= 30) {
+              navbar.classList.remove(navbarClass)
+              navbarState = false;
+            }
+          });
+        }
+      })()
+    </script>
+    {% block additional_site_js %}{% endblock %}
     {% block js %}{% endblock %}
   </body>
 </html>
